@@ -1,3 +1,11 @@
+2020-02-12 Wiley E. Hill <wileyhill@gmail.com>
+
+    * include/geda_handlebox.h: Remove GedaHandleBox members deskoff_x and
+      deskoff_y.
+
+    * src/widgets/geda_handlebox.c: Eliminate the relative offset between the
+      the desktop and the root window; deskoff_x and deskoff_y.
+
 2020-02-07 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_handlebox.c: Revise geda_handle_box_realize to utilize
